--- a/WPNest/WPNest/App.xaml
+++ b/WPNest/WPNest/App.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" 
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     x:Class="WPNest.App"
     >
 
@@ -153,6 +154,89 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+    	<ControlTemplate x:Key="ListPickerControlTemplateLight" TargetType="toolkit:ListPicker">
+    		<StackPanel>
+    			<VisualStateManager.VisualStateGroups>
+    				<VisualStateGroup x:Name="PickerStates">
+    					<VisualState x:Name="Normal"/>
+    					<VisualState x:Name="Highlighted">
+    						<Storyboard>
+    							<ObjectAnimationUsingKeyFrames
+    								Storyboard.TargetName="Border"
+    								Storyboard.TargetProperty="Background"
+    								Duration="0">
+    								<DiscreteObjectKeyFrame
+    									Value="White"
+    									KeyTime="0"/>
+    							</ObjectAnimationUsingKeyFrames>
+    							<ObjectAnimationUsingKeyFrames
+    								Storyboard.TargetName="Border"
+    								Storyboard.TargetProperty="BorderBrush"
+    								Duration="0">
+    								<DiscreteObjectKeyFrame
+    									Value="Black"
+    									KeyTime="0"/>
+    							</ObjectAnimationUsingKeyFrames>
+    						</Storyboard>
+    					</VisualState>
+    					<VisualState x:Name="Disabled">
+    						<Storyboard>
+    							<ObjectAnimationUsingKeyFrames
+    								Storyboard.TargetName="Border"
+    								Storyboard.TargetProperty="Background"
+    								Duration="0">
+    								<DiscreteObjectKeyFrame
+    									Value="{StaticResource TransparentBrush}"
+    									KeyTime="0"/>
+    							</ObjectAnimationUsingKeyFrames>
+    							<ObjectAnimationUsingKeyFrames
+    								Storyboard.TargetName="Border"
+    								Storyboard.TargetProperty="BorderBrush"
+    								Duration="0">
+    								<DiscreteObjectKeyFrame
+    									Value="{StaticResource PhoneDisabledBrush}"
+    									KeyTime="0"/>
+    							</ObjectAnimationUsingKeyFrames>
+    							<ObjectAnimationUsingKeyFrames
+    								Storyboard.TargetName="UserControl"
+    								Storyboard.TargetProperty="Foreground"
+    								Duration="0">
+    								<DiscreteObjectKeyFrame
+    									Value="{StaticResource PhoneDisabledBrush}"
+    									KeyTime="0"/>
+    							</ObjectAnimationUsingKeyFrames>
+    						</Storyboard>
+    					</VisualState>
+    				</VisualStateGroup>
+    			</VisualStateManager.VisualStateGroups>
+    			<ContentControl
+    				Content="{TemplateBinding Header}"
+    				ContentTemplate="{TemplateBinding HeaderTemplate}"
+    				Foreground="{StaticResource PhoneSubtleBrush}"
+    				FontSize="{StaticResource PhoneFontSizeNormal}"
+    				HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+    				Margin="0 0 0 8"/>
+    			<Grid>
+    				<Border x:Name="Border"
+    					Background="White"
+    					BorderBrush="Black"
+    					BorderThickness="{TemplateBinding BorderThickness}">
+    					<UserControl x:Name="UserControl" Foreground="{TemplateBinding Foreground}">
+    						<StackPanel>
+    							<TextBlock x:Name="MultipleSelectionModeSummary" Margin="8 8 0 8" />
+    							<Canvas x:Name="ItemsPresenterHost" MinHeight="46">
+    								<ItemsPresenter x:Name="ItemsPresenter">
+    									<ItemsPresenter.RenderTransform>
+    										<TranslateTransform x:Name="ItemsPresenterTranslateTransform"/>
+    									</ItemsPresenter.RenderTransform>
+    								</ItemsPresenter>
+    							</Canvas>
+    						</StackPanel>
+    					</UserControl>
+    				</Border>
+    			</Grid>
+    		</StackPanel>
+    	</ControlTemplate>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
