--- a/WPNest/WPNest/MainPage/MainPage.xaml
+++ b/WPNest/WPNest/MainPage/MainPage.xaml
@@ -14,7 +14,6 @@
 		<WPNest:FanModeToLabelConverter x:Key="FanModeToLabelConverter"/>
 		<WPNest:IsAwayToLabelConverter x:Key="IsAwayToLabelConverter"/>
 		<WPNest:TrueToVisibleConverter x:Key="TrueToVisibleConverter" />
-		<WPNest:TestValueConverter x:Key="TestConverter" />
 		<Storyboard x:Name="ResetZoom">
 			<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True" />
 			<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True" />
@@ -336,7 +335,7 @@
 		</Storyboard>
 		<DataTemplate x:Key="HvacModeControlTemplate">
 			<WPNest:HvacModeControl HorizontalAlignment="Left" 
-									HvacMode="{Binding HvacMode, Converter={StaticResource TestConverter}}"/>
+									HvacMode="{Binding HvacMode}"/>
 		</DataTemplate>
 	</phone:PhoneApplicationPage.Resources>
 
