Adding support for multiple thermostats to view models

--- a/WPNest/WPNest/MainPage/MainPage.xaml
+++ b/WPNest/WPNest/MainPage/MainPage.xaml
@@ -350,7 +350,7 @@
 	</phone:PhoneApplicationPage.Foreground>
 
 	<d:DataContext>
-		<WPNest:NestSampleViewModel />
+		<WPNest:ThermostatSampleViewModel />
 	</d:DataContext>
 
 	<phone:PhoneApplicationPage.DataContext>
